syntax = "proto3";

option csharp_namespace = "OC_System.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";


service Fase {
    rpc CreateFase (CreateFaseRequest) returns (FaseDTO);
    rpc GetFase (GetRequest) returns (NullableFaseDTO);
    rpc GetAllFase (google.protobuf.Empty) returns (Fases);
    rpc UpdateFase (FaseDTO) returns (google.protobuf.Empty);
    rpc DeleteFase (DeleteRequest) returns (google.protobuf.Empty);
}

message FaseDTO{
	string id = 1;
	string name = 2	;
    string code = 3;
	string descripcion = 4;
	
}

message Fases{
	repeated FaseDTO items = 1;
}

message NullableFaseDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		FaseDTO Fase = 2;
	}
}

message CreateFaseRequest{
	string id = 1;
	string name = 2	;
    string code = 3;
	string descripcion = 4;
}
